pagina terminada ingles espanol

--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
       </div>
     </div>
     <section class="social">
-      <a href=""><i class="fab fa-facebook-square"></i></a>
-      <a href=""><i class="fab fa-instagram"></i></a>
-      <a href=""><i class="fab fa-twitter-square"></i></a>
+      <a href="https://www.facebook.com/Alfemin-104719445705069/"><i class="fab fa-facebook-square"></i></a>
+      <a href="https://www.instagram.com/alfeminsas/?igshid=YmMyMTA2M2Y%3D"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/company/alfemin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
     </section>
   </footer>
 </section>
@@ -328,9 +328,9 @@ Our team is always available to meet your requirements</p>
       </div>
     </div>
     <section class="social">
-      <a href=""><i class="fab fa-facebook-square"></i></a>
-      <a href=""><i class="fab fa-instagram"></i></a>
-      <a href=""><i class="fab fa-twitter-square"></i></a>
+      <a href="https://www.facebook.com/Alfemin-104719445705069/"><i class="fab fa-facebook-square"></i></a>
+      <a href="https://www.instagram.com/alfeminsas/?igshid=YmMyMTA2M2Y%3D"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/company/alfemin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
     </section>
   </footer>
 </section>
