--- a/nosotros.html
+++ b/nosotros.html
@@ -155,9 +155,9 @@
       </div>
     </div>
     <section class="social">
-      <a href=""><i class="fab fa-facebook-square"></i></a>
-      <a href=""><i class="fab fa-instagram"></i></a>
-      <a href=""><i class="fab fa-twitter-square"></i></a>
+      <a href="https://www.facebook.com/Alfemin-104719445705069/"><i class="fab fa-facebook-square"></i></a>
+      <a href="https://www.instagram.com/alfeminsas/?igshid=YmMyMTA2M2Y%3D"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/company/alfemin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
 
     </section>
   </footer>
@@ -247,7 +247,7 @@
           <div class="col-lg-6 col-12  descripcion_personal">
             <p>Hello! I am Paola Avegno, from Guayaquil, daughter, mother and wife, professionally I am a Master in Business Administration with a mention in Market Management, Lead Auditor ISO 9001:2015, Food Engineer with more than 10 years of experience in the food industry.
               <br><br>I started working in the human food sector, I learned a lot and developed myself in the Quality area, in a chocolate factory, where in addition to being able to educate my palate with the different flavors that Ecuadorian cocoa can have, I formed my character, I was able to participate in large projects with local brands that are well known locally and internationally, when I got home everyone welcomed me with open arms after my work day, due to the fragrant smell of chocolate!
-              <br><br>However, life placed me in the least expected place, I made the decision to radically change the odors and began to work in the animal feed sector, specifically in balanced feed factories, although the change was resounding, I cannot regret it since thanks to this I discovered that my thing is the regulatory part, I think it is a fundamental factor for the industry to function smoothly and for the projects to be carried out, through this experience I have allowed myself to have a broad strategic vision, a more open-minded and flexible.
+              <br><br>However, life placed me in the least expected place, I made the decision to radically change the odors and began to work in the animal feed sector, specifically in feed factories, although the change was resounding, I cannot regret it since thanks to this I discovered that my thing is the regulatory part, I think it is a fundamental factor for the industry to function smoothly and for the projects to be carried out, through this experience I have allowed myself to have a broad strategic vision, a more open-minded and flexible.
               <br><br>“He who does not risk does not win!” phrase that has served me well to launch myself into stardom or at least try, I like to live life with optimism, I am a very familiar person, my life has always been linked to helping others and being empathic, I love the color pink and the "Hello Kitty", I think that's how people identify me, although I love living in my pink bubble many times I have to break it.
               <br><br>I put my heart into what I do, I maintain my orientation towards achievement, team leadership, planning, compliance with safety and environmental quality standards, I manage multiple priorities, I like the communication, I am always willing to meet intelligent and effective objectives, SMART.
               <br><br>I am excited about the idea of ​​being able to help or collaborate with you on any of ALFEMIN's services, share my expertise with you and that together we can implement best practices for your business.
@@ -302,10 +302,10 @@
         </div>
       </div>
       <section class="social">
-        <a href=""><i class="fab fa-facebook-square"></i></a>
-        <a href=""><i class="fab fa-instagram"></i></a>
-        <a href=""><i class="fab fa-twitter-square"></i></a>
-  
+        <a href="https://www.facebook.com/Alfemin-104719445705069/"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://www.instagram.com/alfeminsas/?igshid=YmMyMTA2M2Y%3D"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/alfemin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        
       </section>
     </footer>
   </section>
