--- a/servicios.html
+++ b/servicios.html
@@ -25,8 +25,7 @@
     <section class="navegacion navegacion2">
       <nav class="menu">
         <ul>
-          <button onclick="english()">English</button>
-          <button onclick="spanish()">Spanish</button>
+
           <li><a href="./index.html">Inicio</a> </li> 
           <li><a href="./servicios.html">Servicios</a> </li> 
           <li><a href="./nosotros.html">Nosotros</a></li>
@@ -124,37 +123,44 @@
       <h3>Sector Contable</h3>
     </div>
     <div class="">
-      <h3>Actualización de contabilidades</h3>
+      <h3>Auditoria Contable Tributaria.</h3>
+      <h3>Contable:</h3>
+      <p>Una auditoría contable o auditoría 
+        financiera es un proceso sistemático 
+        de revisión de las cuentas anuales de 
+        una persona jurídica. El fin perseguido 
+        es el de comprobar que estas reflejen 
+        la imagen fiel de la misma.</p>
+      <h3>Tributaria:</h3>
+      <p>-	La Auditoria Tributaria es el examen fiscalizador que realiza un auditor fiscal o independiente para determinar la veracidad de los resultados de operaciones y situación financiera declarados por la empresa (contribuyente), a través de su información financiera u otros medios.</p>
     </div>
     <div class="">
       <h3>Liquidación de sociedades</h3>
+      <ul>
+        <li>- Disolución de Compañias</li>
+        <li>- Liquidación de Compañias</li>
+        <li>- Reactivación de compañías</li>
+      </ul>
     </div>
     <div class="">
-      <h3>Reapertura de sociedades </h3>
+      <h3>Apertura de sociedades </h3>
+      <ul>
+        <li>- Superintendencia de Compañías </li>
+        <li>- Superintendencia de Bancos</li>
+        <li>- Razón Social Instituto de Seguridad Social IESS</li>
+      </ul>
     </div>
     <div class="">
       <h3>Servicios contables </h3>
-    </div>
-    <div class="">
-      <h3>Declaración y pago de retenciones fuente de renta </h3>
-    </div>
-    <div class="">
-      <h3>Formulario 103. declaración y pago de impuestos al valor agregado </h3>
-    </div>
-    <div class="">
-      <h3>Formulario 104. declaración y pago de impuestos a los cosumidores </h3>
-    </div>
-    <div class="">
-      <h3>Anexos del ICE </h3>
-    </div>
-    <div class="">
-      <h3>Formulario 105. Anexo transaccional simplificado ATS. </h3>
-    </div>
-    <div class="">
-      <h3>Devolución de IVA </h3>
-    </div>
-    <div class="">
-      <h3>Declaración de gastos personales</h3>
+      <ul>
+        <li>-Declaración y pago de retenciones fuente de renta </li>
+        <li>- Formulario 103. Declaración y pago del Impuesto al Valor Agregado IVA </li>
+        <li>- Formulario 104. Declaración y pago del Impuesto a los Consumos Especiales ICE </li>
+        <li>- Anexos del ICE</li>
+        <li>- Formulario 105. Anexo Transaccional Simplificado ATS.</li>
+        <li>- Devolución de IVA</li>
+        <li>Declaración de Gastos Personales</li>
+      </ul>
     </div>
   </section>
 
@@ -172,9 +178,9 @@
       </div>
     </div>
     <section class="social">
-      <a href=""><i class="fab fa-facebook-square"></i></a>
-      <a href=""><i class="fab fa-instagram"></i></a>
-      <a href=""><i class="fab fa-twitter-square"></i></a>
+      <a href="https://www.facebook.com/Alfemin-104719445705069/"><i class="fab fa-facebook-square"></i></a>
+      <a href="https://www.instagram.com/alfeminsas/?igshid=YmMyMTA2M2Y%3D"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/company/alfemin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
     </section>
   </footer>
   </section>
@@ -230,7 +236,7 @@
     <div class="descripcion mt-5">
       <div class="row">
         <div class="col-12 col-lg-6 d-flex justify-content-center my-5 my-lg-0">
-          <img src="./images/logo_servicios.png" alt="">
+          <img src="./images/logo_servicios2.png" alt="">
         </div>
         <div class="col-12 col-lg-6  d-flex align-items-center pe-lg-5 ">
           <p class="pe-lg-5">Get to know all the services we have to offer you, each
@@ -286,40 +292,47 @@
 
   <section class="servicio4">
     <div class="">
-      <h3>Accounting Sector      </h3>
+      <h3>Accounting Sector</h3>
     </div>
     <div class="">
-      <h3>Accounting update      </h3>
+      <h3>Tax Accounting Audit.</h3>
+      <h3><strong>Accountant      </strong></h3>
+      <p>An accounting audit or audit
+        finance is a systematic process
+        review of the annual accounts of
+        a legal person. the end pursued
+        is to check that these reflect
+        true image of it.</p>
+      <h3><strong>Tax</strong></h3>
+      <p>-	The Tax Audit is the inspection examination carried out by a fiscal or independent auditor to determine the veracity of the results of operations and financial situation declared by the company (taxpayer), through its financial information or other means.</p>
     </div>
     <div class="">
-      <h3>Liquidation of companies   </h3>
+      <h3>Liquidation of companies</h3>
+      <ul>
+        <li>- Dissolution of Companies</li>
+        <li>- Liquidation of Companies</li>
+        <li>- Reactivation of companies</li>
+      </ul>
     </div>
     <div class="">
-      <h3>Reopening of companies </h3>
+      <h3>Opening of companies </h3>
+      <ul>
+        <li>- Superintendency of Companies </li>
+        <li>- Superintendency of Banks</li>
+        <li>- Company Name Social Security Institute IESS</li>
+      </ul>
     </div>
     <div class="">
-      <h3>Accounting service      </h3>
-    </div>
-    <div class="">
-      <h3>Declaration and payment of income source withholdings </h3>
-    </div>
-    <div class="">
-      <h3>Form 103. declaration and payment of value added taxes</h3>
-    </div>
-    <div class="">
-      <h3>       Form 104. declaration and payment of taxes to consumers </h3>
-    </div>
-    <div class="">
-      <h3>ICE Annexes      </h3>
-    </div>
-    <div class="">
-      <h3>Form 105. ATS simplified transactional annex. </h3>
-    </div>
-    <div class="">
-      <h3>VAT refund</h3>
-    </div>
-    <div class="">
-      <h3>Declaration of personal expenses</h3>
+      <h3>Accounting services</h3>
+      <ul>
+        <li>-Declaration and payment of income source withholdings </li>
+        <li>- Form 103. Declaration and payment of Value Added Tax VAT</li>
+        <li>- Form 104. Declaration and payment of the Special Consumption Tax ICE </li>
+        <li>- ICE Annexes</li>
+        <li>- Form 105. Simplified Transactional Annex ATS.</li>
+        <li>- VAT refund</li>
+        <li>-Statement of Personal Expenses</li>
+      </ul>
     </div>
   </section>
 
@@ -338,9 +351,9 @@ Cell phone:(+593) 98 654 7598</p>
       </div>
     </div>
     <section class="social">
-      <a href=""><i class="fab fa-facebook-square"></i></a>
-      <a href=""><i class="fab fa-instagram"></i></a>
-      <a href=""><i class="fab fa-twitter-square"></i></a>
+      <a href="https://www.facebook.com/Alfemin-104719445705069/"><i class="fab fa-facebook-square"></i></a>
+      <a href="https://www.instagram.com/alfeminsas/?igshid=YmMyMTA2M2Y%3D"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/company/alfemin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
     </section>
   </footer>
   </section>
