--- a/contactanos.html
+++ b/contactanos.html
@@ -130,9 +130,9 @@
       </div>
     </div>
     <section class="social">
-      <a href=""><i class="fab fa-facebook-square"></i></a>
-      <a href=""><i class="fab fa-instagram"></i></a>
-      <a href=""><i class="fab fa-twitter-square"></i></a>
+      <a href="https://www.facebook.com/Alfemin-104719445705069/"><i class="fab fa-facebook-square"></i></a>
+      <a href="https://www.instagram.com/alfeminsas/?igshid=YmMyMTA2M2Y%3D"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/company/alfemin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
 
     </section>
   </footer>
@@ -254,13 +254,13 @@
           </div>
         </div>
         <section class="social">
-          <a href=""><i class="fab fa-facebook-square"></i></a>
-          <a href=""><i class="fab fa-instagram"></i></a>
-          <a href=""><i class="fab fa-twitter-square"></i></a>
+          <a href="https://www.facebook.com/Alfemin-104719445705069/"><i class="fab fa-facebook-square"></i></a>
+          <a href="https://www.instagram.com/alfeminsas/?igshid=YmMyMTA2M2Y%3D"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/alfemin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
     
         </section>
       </footer>
-       </section>
+      </section>
 
 
 
